--- a/public/CamCom.html
+++ b/public/CamCom.html
@@ -23,7 +23,7 @@
                     <li class="nav-item"><a class="nav-link" href="AgCom.html">Agregar comida</a></li>
                     <li class="nav-item"><a class="nav-link" href="EliCom.html">Eliminar comida</a></li>
                     <li class="nav-item"><a class="nav-link active" href="CamCom.html">Cambiar comida</a></li>
-                    <li class="nav-item"><a class="nav-link" href="Lista.html">Lista de comida</a></li>
+                    <li class="nav-item"><a class="nav-link active" href="/getComida">Lista de comida</a></li>
                 </ul><a class="btn btn-primary shadow" role="button">n0</a>
             </div>
         </div>
